--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -77,7 +77,7 @@
         <li><a href="https://kaggle.com/{{ author.kaggle }}"><i class="fab fa-fw fa-kaggle icon-pad-right" aria-hidden="true"></i>Kaggle</a></li>
       {% endif %}      
       {% if author.huggingface %}
-        <li><a href="https://huggingface.co/{{ author.huggingface }}"><i class="fab fa-fw fa-facesmilinghands icon-pad-right" aria-hidden="true"></i>HuggingFace</a></li>
+        <li><a href="https://huggingface.co/{{ author.huggingface }}"><i class="fab fa-fw fa-🤗 icon-pad-right" aria-hidden="true"></i>HuggingFace</a></li>
       {% endif %}
       {% if author.stackoverflow %}
         <li><a href="https://www.stackoverflow.com/users/{{ author.stackoverflow }}"><i class="fab fa-fw fa-stack-overflow icon-pad-right" aria-hidden="true"></i>Stackoverflow</a></li>
