--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -63,7 +63,7 @@
     {% elsif post.paperurl %}
       <p><a href=" {{ post.paperurl }} ">View Paper</a></p>
     {% elsif post.slidesurl %}
-      <p>Download <a href="{{ post.slidesurl }}">Download Slides</a></p></p>
+      <p><a href="{{ post.slidesurl }}">Download Slides</a></p></p>
     {% endif %}
 
   </article>
